fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-* {
-  overflow: hidden;
-}
-
 html {
   font-size: 62.5%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
   width: auto;
+}
+
+html > * {
+  overflow: hidden;
 }
 
 body {
@@ -143,7 +143,7 @@ h1 {
   cursor: pointer;
 }
 #chat-log-container {
-  margin-top: 2rem;
+  padding-top: 2rem;
   width: 90%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -157,7 +157,7 @@ h1 {
 
 #chat-log {
   width: 90%;
-  margin-top: 5rem;
+  padding-top: 5rem;
 }
 
 #form-container {
